--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.8.5",
     "autoprefixer": "^10.0.2",
     "postcss": "^8.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^2.0.1"
