--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.8.5",
     "autoprefixer": "^10.0.2",
+    "firebase": "^8.1.1",
     "postcss": "^8.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
